# INSA-PDC-micro-aevol

./: .gitignore  Algorithms.cu  Algorithms.cuh  Algorithms.h  CMakeLists.txt  Dna.cpp  ExpManager.cpp  ExpManager.h  Organism.cpp  README.md  ThreefryGPU.h  main.cpp  notes.md
benchmark/: callgrind.out.5996  callgrind.out.8729  callgrind.out.9060  merge_benchmarks.py  search_CPU.csv  search_GPU_block_size_comparison.csv  selection_bm0.nvvp  selection_bm1.nvvp
rapport/: rapport.tex
